--- a/index.css
+++ b/index.css
@@ -5,6 +5,14 @@
   box-sizing: border-box;
 }
 
+#body{
+  display: grid;
+  grid-template-columns: 1fr 1fr;
+  grid-template-areas: "left-column right-column";
+  width: 1200px;
+  margin: 100px auto;
+}
+
 a {
   color: black;
   text-decoration: none;
