--- a/index.css
+++ b/index.css
@@ -53,11 +53,12 @@
      display: flex;
      border: 2px #47167D solid;
      background-color: white;
-     margin: 20px;
     }
 
    .li_ancre {
-     margin-left: 185px;
+     margin-left: 177px;
+     margin-bottom: 10px;
+     margin-top: 10px;
      margin-right: 110px;
      border: 1px #47167D solid;
      background-color: white;
